[project]
name = "projet2"
version = "0.1.0"
description = ""
authors = [
    {name = "Tarek",email = "tareknoubli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.4.5,<5.0.0)",
    "ipykernel (>=6.30.0,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "sklearn-preprocessing (>=0.1.0,<0.2.0)",
    "scikit-learn (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
